--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,24 @@
 - layout: left
-  name: Harvard University
-  dates: 2010 - 2013
-  qualification: BSc Computer Science
-  quote: >
-    Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-  description: | # this will include new lines to allow paragraphs
-    During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+  name: University of Rchester
+  dates: 2019 -
+  qualification: PhD Computer Science
 
-    I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+- layout: left
+  name: University of Rchester
+  dates: 2017 - 2019
+  qualification: MS Computational Linguistics
+  advisor: [Aaron Steven White](http://aaronstevenwhite.io/)
+  description: Final project 'Neg-raising inference and its syntactic contexts'
+
+- layout: left
+  name: University of Washington
+  dates: 2012 - 2017
+  qualification: BA Linguistics
+  supervisor: [Toshiyuki Ogihara] (https://faculty.washington.edu/ogihara/)
+  description: Honors thesis 'Characteristic determiners vs. adjectives in Korean'
+    
+- layout: left
+  name: University of Washington
+  dates: 2012 - 2017
+  qualification: BS Applied and Computational Mathematical Sciences
+  description: Specialization: Scientific Computing and Numerical Algorithms
