--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@
 
 # Personal info
 name: Hannah YoungEun An
-title: Senior Network System Administrator
+title: URCS graduate student
 email: yan2@ur.rochester.edu
 website: hannah0n.github.io
 
 # Social links
 twitter_username: hannah0n
 github_username:  hannah0n
-linkedin_username: hannah0n
+linkedin_username: hannah-an
 
 # About Section
 # about_title: About Me
