--- a/_data/education.yml
+++ b/_data/education.yml
@@ -7,15 +7,13 @@
   name: University of Rchester
   dates: 2017 - 2019
   qualification: MS Computational Linguistics
-  advisor: [Aaron Steven White](http://aaronstevenwhite.io/)
-  description: Final project 'Neg-raising inference and its syntactic contexts'
+  description: Final project: 'Neg-raising inference and its syntactic contexts' supervised by [Aaron Steven White](http://aaronstevenwhite.io/)
 
 - layout: left
   name: University of Washington
   dates: 2012 - 2017
   qualification: BA Linguistics
-  supervisor: [Toshiyuki Ogihara] (https://faculty.washington.edu/ogihara/)
-  description: Honors thesis 'Characteristic determiners vs. adjectives in Korean'
+  description: Honors thesis: 'Characteristic determiners vs. adjectives in Korean' supervised by [Toshiyuki Ogihara] (https://faculty.washington.edu/ogihara/)
     
 - layout: left
   name: University of Washington
