--- a/_data/education.yml
+++ b/_data/education.yml
@@ -7,16 +7,16 @@
   name: University of Rchester
   dates: 2017 - 2019
   qualification: MS Computational Linguistics
-  description: Final project: 'Neg-raising inference and its syntactic contexts' supervised by [Aaron Steven White](http://aaronstevenwhite.io/)
+  description: Final project 'Neg-raising inference and its syntactic contexts' supervised by [Aaron Steven White](http://aaronstevenwhite.io/)
 
 - layout: left
   name: University of Washington
   dates: 2012 - 2017
   qualification: BA Linguistics
-  description: Honors thesis: 'Characteristic determiners vs. adjectives in Korean' supervised by [Toshiyuki Ogihara] (https://faculty.washington.edu/ogihara/)
+  description: Honors thesis 'Characteristic determiners vs. adjectives in Korean' supervised by [Toshiyuki Ogihara] (https://faculty.washington.edu/ogihara/)
     
 - layout: left
   name: University of Washington
   dates: 2012 - 2017
   qualification: BS Applied and Computational Mathematical Sciences
-  description: Specialization: Scientific Computing and Numerical Algorithms
+  description: Specialization in Scientific Computing and Numerical Algorithms
