--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,10 @@
 - layout: left
-  name: University of Rchester
+  name: University of Rochester
   dates: 2019 -
   qualification: PhD Computer Science
 
 - layout: left
-  name: University of Rchester
+  name: University of Rochester
   dates: 2017 - 2019
   qualification: MS Computational Linguistics
   description: |
