--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ about_content: | # this will include new lines to allow paragraphs
   
   I work with [James Allen](http://www.cs.rochester.edu/~james/). I am also involved in [FACTS.lab](http://factslab.io/)'s [MegaAttitude Project](http://megaattitude.io/).
   
-  For CS400 fake proposal reviews: *[proposal](https://hannah0n.github.io/temp-400/index.html).*
+  For CS400 fake proposal reviews: *[proposal](https://github.com/hannah0n/temp-400/blob/master/index.html).*
   
 # Projects Section
 # projects_title: Projects
