--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ about_content: | # this will include new lines to allow paragraphs
   
   I work with [James Allen](http://www.cs.rochester.edu/~james/). I am also involved in [FACTS.lab](http://factslab.io/)'s [MegaAttitude Project](http://megaattitude.io/).
   
-  For CS400 fake proposal reviews: *[proposal](https://docs.google.com/gview?url=https://github.com/hannah0n/temp-400/raw/master/proposal.pdf).*
+#  For CS400 fake proposal reviews: *[proposal](https://docs.google.com/gview?url=https://github.com/hannah0n/temp-400/raw/master/proposal.pdf).*
   
 # Projects Section
 # projects_title: Projects
@@ -29,8 +29,10 @@ about_content: | # this will include new lines to allow paragraphs
 # Experience Section
 # experience_title: Experience
 
+teaching_title: Teaching
+
 # Education Section
-# educaton_title: Education
+educaton_title: Education
 
 # More Section
 # more_title: A Little More About Me
