--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,7 +2,7 @@
   name: University of Rochester
   dates: 2019 - current
   qualification: PhD Computer Science
-  Description: |
+  description: |
     Area of specialization: Artificial Intelligence 
 
 - layout: left
