--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ about_content: | # this will include new lines to allow paragraphs
 teaching_title: Teaching
 
 # Education Section
-educaton_title: Education
+education_title: Education
 
 # More Section
 # more_title: A Little More About Me
