--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ about_content: | # this will include new lines to allow paragraphs
 # Experience Section
 # experience_title: Experience
 
+papers_title: Papers
+
 teaching_title: Teaching
 
 # Education Section
