--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -1,5 +1,7 @@
 - layout: left
   name: 2020
+  dates:
+  qualification:
   description: |
     An, Hannah Y. and White, Aaron S. (2020). [The lexical and grammatical sources of neg-raising inferences](https://scholarworks.umass.edu/scil/vol3/iss1/23). Proceedings of the Society for Computation in Linguistics: Vol. 3 , Article 23.
 
