--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -3,5 +3,5 @@
   dates:
   qualification:
   description: |
-    An, Hannah Y. and White, Aaron S. (2020). [The lexical and grammatical sources of neg-raising inferences](https://scholarworks.umass.edu/scil/vol3/iss1/23). Proceedings of the Society for Computation in Linguistics: Vol. 3 , Article 23.
+    An, Hannah Y. and White, Aaron S. (2020). [The lexical and grammatical sources of neg-raising inferences](https://scholarworks.umass.edu/scil/vol3/iss1/23). *Proceedings of the Society for Computation in Linguistics*: Vol. 3 , Article 23.
 
