--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -3,5 +3,12 @@
   dates:
   qualification:
   description: |
+    Allen, James; An, Hannah Y.; Bose, Rikwik; de Beaumont, Will; and Teng, Choh Man. (2020). A Broad-Coverage Deep Semantic Lexicon for Verbs. To appear in *Proceedings of the Twelfth International Conference on Language Resources and Evaluation, LREC 2020*.
+
+- layout: left
+  name:
+  dates:
+  qualification:
+  description: |
     An, Hannah Y. and White, Aaron S. (2020). [The lexical and grammatical sources of neg-raising inferences](https://scholarworks.umass.edu/scil/vol3/iss1/23). *Proceedings of the Society for Computation in Linguistics*: Vol. 3 , Article 23.
 
