--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,12 @@ linkedin_username: hannah-an
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I'm a first-year PhD student at the University of Rochester in [Computer Science](https://www.cs.rochester.edu/). My research is in Natural Language Understanding and/or Computatinal Linguistics, with a focus on building ontologies and studying syntactic/semantic phenomena in natural language. 
-  
-  I work with [James Allen](http://www.cs.rochester.edu/~james/). I am also involved in [FACTS.lab](http://factslab.io/)'s [MegaAttitude Project](http://megaattitude.io/).
-  
+  I'm a second-year PhD student at the University of Rochester in [Computer Science](https://www.cs.rochester.edu/). My research is in Natural Language Understanding and/or Computatinal Linguistics, with a focus on building ontologies and mining commonsense knowledge.
+
+  I work with [James Allen](http://www.cs.rochester.edu/~james/) and [Len Schubert](https://www.cs.rochester.edu/~schubert/). In the past, I was involved in [FACTS.lab](http://factslab.io/)'s [MegaAttitude Project](http://megaattitude.io/).
+
 #  For CS400 fake proposal reviews: *[proposal](https://docs.google.com/gview?url=https://github.com/hannah0n/temp-400/raw/master/proposal.pdf).*
-  
+
 # Projects Section
 # projects_title: Projects
 
