--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ linkedin_username: hannah-an
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I'm a second-year PhD student at the University of Rochester in [Computer Science](https://www.cs.rochester.edu/). My research is in Natural Language Understanding and/or Computatinal Linguistics, with a focus on building ontologies and mining commonsense knowledge.
+  I'm a second-year PhD student at the University of Rochester in [Computer Science](https://www.cs.rochester.edu/). My research is in Natural Language Understanding and/or Computatinal Linguistics, with a focus on building ontologies and mining commonsense knowledge. Specifically, I work on building commonsense knowledge with a deep semantic lexicon and automating inference rule extraction with [James Allen](http://www.cs.rochester.edu/~james/), and organizing world knowledge into schemas to reflect the relational understanding between entities as well as between knowledge and action with [Len Schubert](https://www.cs.rochester.edu/~schubert/).
 
-  I work with [James Allen](http://www.cs.rochester.edu/~james/) and [Len Schubert](https://www.cs.rochester.edu/~schubert/). In the past, I was involved in [FACTS.lab](http://factslab.io/)'s [MegaAttitude Project](http://megaattitude.io/).
+  In the past, I was involved in [FACTS.lab](http://factslab.io/)'s [MegaAttitude Project](http://megaattitude.io/) for building lexicon-scale datasets from crowdsourcing and studying the semantic contribution of lexical items and syntactic structures.
 
 #  For CS400 fake proposal reviews: *[proposal](https://docs.google.com/gview?url=https://github.com/hannah0n/temp-400/raw/master/proposal.pdf).*
 
