--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -3,12 +3,11 @@
   dates:
   qualification:
   description: |
-    Allen, James; An, Hannah; Bose, Rikwik; de Beaumont, Will; and Teng, Choh Man. (2020). [A Broad-Coverage Deep Semantic Lexicon for Verbs](http://www.lrec-conf.org/proceedings/lrec2020/pdf/2020.lrec-1.396.pdf). In *Proceedings of the 12th Language Resources and Evaluation Conference (LREC 2020)*, pages 3243–3251. European Language Resources Association.
+    James Allen, Hannah An, Rikwik  Bose, Will de Beaumont, and Choh Man Teng. (2020). [A Broad-Coverage Deep Semantic Lexicon for Verbs](http://www.lrec-conf.org/proceedings/lrec2020/pdf/2020.lrec-1.396.pdf). In *Proceedings of the 12th Language Resources and Evaluation Conference (LREC 2020)*, pages 3243–3251. European Language Resources Association.
 
 - layout: left
   name:
   dates:
   qualification:
   description: |
-    An, Hannah Y. and White, Aaron S. (2020). [The lexical and grammatical sources of neg-raising inferences](https://scholarworks.umass.edu/scil/vol3/iss1/23). In *Proceedings of the Society for Computation in Linguistics (SCiL 2020)*, *3*(23), pages 220-233.
-
+    Hannah Y. An and Aaron S. White. (2020). [The lexical and grammatical sources of neg-raising inferences](https://scholarworks.umass.edu/scil/vol3/iss1/23). In *Proceedings of the Society for Computation in Linguistics (SCiL 2020)*, *3*(23), pages 220-233.
