--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -3,7 +3,7 @@
   dates:
   qualification:
   description: |
-    James Allen, Hannah An, Rikwik  Bose, Will de Beaumont, and Choh Man Teng. (2020). [A Broad-Coverage Deep Semantic Lexicon for Verbs](https://www.aclweb.org/anthology/2020.lrec-1.396). In *Proceedings of the 12th Language Resources and Evaluation Conference (LREC 2020)*, pages 3243–3251. European Language Resources Association.
+    James Allen, Hannah An, Rikwik  Bose, Will de Beaumont, and Choh Man Teng. (2020). [A Broad-Coverage Deep Semantic Lexicon for Verbs](https://www.aclweb.org/anthology/2020.lrec-1.396/). In *Proceedings of the 12th Language Resources and Evaluation Conference (LREC 2020)*, pages 3243–3251. European Language Resources Association.
 
 - layout: left
   name:
