--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           I work on obtaining commonly assumed knowledge about objects from various sources and representing the acquired knowledge in a formalized knowledge representation, called a schema. My work focuses on capturing <mark>lexical knowledge</mark>, such as hypernyms, properties, and usage information, to enable AI's human-like reasoning.
       - layout: top-middle
+        border: weak
         title: Semantically compressed forms
         quote: >
           What do you mean by you think so?
