--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ version: 2
 name: Hannah YoungEun An
 title: URCS Doctoral Student
 email: yan2@ur.rochester.edu
-website: hannah0n.github.io
+website: anyhannah.github.io
 
 # Dark Mode (true/false/never)
 darkmode: never
 
 # Social links
 twitter_username: hannah0n
-github_username:  hannah0n
+github_username:  anyhannah
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # flickr_username: jekyll
@@ -90,7 +90,7 @@ content:
       - layout: left
         title: 
         description: |
-            **Hannah Y. An** and Aaron S. White. (2020). [The lexical and grammatical sources of neg-raising inferences](https://scholarworks.umass.edu/scil/vol3/iss1/23). In *Proceedings of the Society for Computation in Linguistics (SCiL 2020)*, *3*(23), pages 220-233. [<mark>poster</mark>](https://hannah0n.github.io/assets/poster_SCiL2020.pdf)
+            **Hannah Y. An** and Aaron S. White. (2020). [The lexical and grammatical sources of neg-raising inferences](https://scholarworks.umass.edu/scil/vol3/iss1/23). In *Proceedings of the Society for Computation in Linguistics (SCiL 2020)*, *3*(23), pages 220-233. [<mark>poster</mark>](https://anyhannah.github.io/assets/poster_SCiL2020.pdf)
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
