--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ content:
         description: | # this will include new lines to allow paragraphs
             **Hannah Y. An**, and Lenhart K. Schubert. (2024). [Large Language Models as a Tool for Mining Object Knowledge](https://doi.org/10.48550/arXiv.2410.12959). [<mark>paper</mark>](https://arxiv.org/pdf/2410.12959)
       - layout: left
-        title: "2024"
+        title: 
         description: |
             Jiacan Yu, **Hannah Y. An**, and Lenhart K. Schubert. (2024). Language Models Benefit from Preparation with Elicited Knowledge. [<mark>dataset</mark>](https://huggingface.co/datasets/jjjyu48/SharedMaterialQA)
       - layout: left
